--- a/Notebook/Tarification non-vie.ipynb
+++ b/Notebook/Tarification non-vie.ipynb
@@ -19,9 +19,86 @@
     "import statsmodels.api as sm\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "import warnings\n",
+    "import rpy2.robjects as robjects\n",
+    "from rpy2.robjects import pandas2ri\n",
+    "from rpy2.robjects.packages import importr\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe89fda0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Activer la conversion R → pandas\n",
+    "pandas2ri.activate()\n",
+    "\n",
+    "#Installation des packages de base de R\n",
+    "utils = importr('utils')\n",
+    "#base = importr('base')\n",
+    "\n",
+    "utils.chooseCRANmirror(ind=1)\n",
+    "utils.install_packages('CASdatasets')\n",
+    "\n",
+    "cas=importr('CASdatasets')\n",
+    "\n",
+    "\n",
+    "#Les variables de type factor (par ex. VehBrand, VehGas, etc.) sont codées en entiers en R, mais leur affichage dépend des labels.\n",
+    "\n",
+    "#Si on les importe directement, rpy2 importe les entiers sans les labels → d’où les noms en chiffres que tu vois.\n",
+    "\n",
+    "#Le fait de les convertir en chaînes de caractères (as.character) dans R permet de préserver les labels textuels dans pandas.\n",
+    "\n",
+    "robjects.r('data(freMTPL2freq)')\n",
+    "robjects.r('data(freMTPL2sev)')\n",
+    "robjects.r('freMTPL2freq[] <- lapply(freMTPL2freq, function(x) if (is.factor(x)) as.character(x) else x)')\n",
+    "robjects.r('freMTPL2sev[] <- lapply(freMTPL2sev, function(x) if (is.factor(x)) as.character(x) else x)')\n",
+    "\n",
+    "\n",
+    "# Récupérer l’objet freMTPL\n",
+    "\n",
+    "df_freq= robjects.r('freMTPL2freq')\n",
+    "df_sev=robjects.r('freMTPL2sev')\n",
+    "\n",
+    "# Le convertir en DataFrame pandas\n",
+    "\n",
+    "df = pandas2ri.rpy2py(df_freq)\n",
+    "d_sev=pandas2ri.rpy2py(df_sev)\n",
+    "\n",
+    "\n",
+    "# Vérification des polices uniques et communes\n",
+    "results = []\n",
+    "\n",
+    "unique_policies = df['IDpol'].nunique()\n",
+    "results.append([\"Polices uniques dans df\", unique_policies])\n",
+    "\n",
+    "common_policies = set(d_sev['IDpol']).intersection(set(df['IDpol']))\n",
+    "results.append([\"Polices communes entre d_sev et df\", len(common_policies)])\n",
+    "\n",
+    "# Création du DataFrame pour afficher les résultats sous forme de table\n",
+    "df_results = pd.DataFrame(results, columns=[\"Vérification\", \"Valeur\"])\n",
+    "print(df_results)\n",
+    "\n",
+    "##6 polices n'ont pas de caractéristiques dans la table principale\n",
+    "TotalClaim_b=d_sev['ClaimAmount'].sum()\n",
+    "non_common_policies = d_sev[~d_sev['IDpol'].isin(df['IDpol'])]\n",
+    "d_sev = d_sev[d_sev['IDpol'].isin(df['IDpol'])]\n",
+    "##Multiples lignes pour une police dans sev\n",
+    "sev=d_sev.groupby(\"IDpol\").agg(ClaimAmount=(\"ClaimAmount\",\"sum\"),\n",
+    "                         Claimsevnb=(\"IDpol\",\"count\")).reset_index()\n",
+    "\n",
+    "TotalClaim_a=d_sev['ClaimAmount'].sum()\n",
+    "\n",
+    "TotalClaim_a/TotalClaim_b\n",
+    "\n",
+    "data= pd.merge(df,sev,on=\"IDpol\",how=\"outer\")\n",
+    "data['ClaimAmount'].fillna(0, inplace = True)\n",
+    "data['Claimsevnb'].fillna(0, inplace = True)\n"
    ]
   },
   {
