--- a/Notebook/Tarification non-vie.ipynb
+++ b/Notebook/Tarification non-vie.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9b442da5",
+   "metadata": {},
+   "source": [
+    "# Tarification Non-Vie : Modélisation Fréquence x Sévérité\n",
+    "Ce projet vise à construire une tarification de la prime pure pour des contrats d’assurance automobile, en modélisant séparément la fréquence et la sévérité des sinistres, selon la méthode traditionnelle GLM (Generalized Linear Models).\n",
+    "\n",
+    "📌 Données : freMTPL2freq (fréquence) et freMTPL2sev (sévérité) issues de CASdatasets (R).\n",
+    "\n",
+    "🎯 Objectifs :\n",
+    "- Explorer les variables explicatives et leur lien avec les cibles.\n",
+    "- Construire deux modèles GLM.\n",
+    "- Estimer la prime pure puis la prime commerciale.\n",
+    "- Évaluer la rentabilité du portefeuille via le ratio de sinistralité.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2947d60f",
@@ -287,6 +304,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef3abf0b",
+   "metadata": {},
+   "source": [
+    "# L'analyse exploratoire permettra de détecter les relations non linéaires, les variables explicatives influentes et d’orienter le choix des modalités de regroupement (binning) pour les variables numériques.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "74c2a3a7",
@@ -440,8 +465,8 @@
     "\n",
     "Cette configuration est typique dans le domaine de l’assurance : peu de sinistres coûtent très cher mais ils impactent fortement la moyenne. \n",
     "\n",
-    "Il peut être pertinent de considérer des modèles adaptés aux distributions asymétriques ou à queue lourde (ex. Log-Normale, Gamma, Pareto).\n",
-    "---\n",
+    "**Il peut être pertinent de considérer des modèles adaptés aux distributions asymétriques ou à queue lourde (ex. Log-Normale, Gamma, Pareto).**\n",
+    "\n",
     "\n",
     "###  Conclusion\n",
     "\n",
@@ -454,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6f815ddd",
    "metadata": {},
    "outputs": [
@@ -579,18 +604,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "62e22a47",
-   "metadata": {},
-   "source": [
-    "\n",
-    "---\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "dae846ad",
    "metadata": {},
    "outputs": [
@@ -703,11 +718,73 @@
    "cell_type": "markdown",
    "id": "0e5b5062",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 📝 Sélection de variables pour la tarification\n",
+    "\n",
+    "### 🎯 Objectif\n",
+    "L'objectif de cette analyse est d'identifier les variables explicatives pertinentes pour modéliser la **fréquence** (`ClaimNb`) et la **sévérité moyenne** (`Severity`) des sinistres, dans une optique de **tarification automobile**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔍 Analyse exploratoire\n",
+    "\n",
+    "#### 1. `VehPower` – Puissance du véhicule\n",
+    "\n",
+    "- **Fréquence** : Relativement homogène, mais pic à 9–11 CV (~11-12%).\n",
+    "- **Sévérité** : Anomalie forte pour la puissance **9 CV**, avec une sévérité > 3500€, bien supérieure aux autres modalités.\n",
+    "\n",
+    "**📌 Justification**\n",
+    "- Variable pertinente surtout pour la **modélisation de la sévérité**.\n",
+    "- La non-linéarité de l’effet suggère un traitement spécifique (catégorisation ou spline).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 2. `VehBrand` – Marque du véhicule\n",
+    "\n",
+    "- **Fréquence** : Marque **B12** a la plus forte fréquence (>13%).\n",
+    "- **Sévérité** : Marque **B10** génère les sinistres les plus coûteux (>3000€), malgré une fréquence modérée.\n",
+    "\n",
+    "**📌 Justification**\n",
+    "- Variable à effet **double** : influence significative sur la **fréquence** et la **sévérité**.\n",
+    "- Peut refléter des différences structurelles : coût des pièces, profil des conducteurs, types d’usage.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 3. `Area` – Zone géographique\n",
+    "\n",
+    "- **Fréquence** : Croît de façon régulière de A à F (~9% à ~13.5%).\n",
+    "- **Sévérité** : Plus hétérogène. Zone B se distingue avec la sévérité la plus élevée (~2400€), tandis que la zone F a une fréquence élevée mais une sévérité faible.\n",
+    "\n",
+    "**📌 Justification**\n",
+    "- Variable explicative claire pour la **fréquence** des sinistres (effet densité urbaine, circulation).\n",
+    "- Nécessite une attention particulière en cas de colinéarité avec d’autres variables géographiques ou socio-économiques.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ Conclusion : Variables retenues pour modélisation\n",
+    "\n",
+    "| Variable    | Fréquence sinistres | Sévérité sinistres | Recommandation |\n",
+    "|-------------|----------------------|---------------------|----------------|\n",
+    "| `VehPower`  | Moyenne               | Très élevée (pic à 9 CV) | À inclure, effet non linéaire |\n",
+    "| `VehBrand`  | Forte variation       | Forte variation     | À inclure dans les deux modèles |\n",
+    "| `Area`      | Variation progressive | Hétérogène          | À inclure pour la fréquence |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 Remarques techniques\n",
+    "- Le traitement des variables peut nécessiter :\n",
+    "  - Recodage en classes pour `VehPower`\n",
+    "  - Encodage one-hot pour `VehBrand` (ou effet modalité dans GLM)\n",
+    "  - Ordinalisation ou transformation pour `Area`\n",
+    "- La fréquence et la sévérité peuvent être modélisées séparément (GLM Poisson/Gamma ou Tweedie)\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ab26db1d",
    "metadata": {},
    "outputs": [
@@ -775,7 +852,6 @@
     "            cramer_matrix.loc[col1, col2] = round(v, 3)\n",
     "\n",
     "cramer_matrix = cramer_matrix.astype(float)\n",
-    "print(cramer_matrix)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cramer_matrix, annot=True, cmap='Blues', vmin=0, vmax=1)\n",
@@ -785,13 +861,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c162b1",
+   "id": "c03ca6fa",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 🔧 Encodage et normalisation des données\n",
+    "\n",
+    "Ce bloc prépare les données pour un modèle de machine learning. Il gère à la fois les **variables numériques** et **catégorielles** via un pipeline de transformation.\n",
+    "\n",
+    "### 📦 Imports\n",
+    "On importe les outils nécessaires depuis `scikit-learn` :\n",
+    "\n",
+    "- `OneHotEncoder` : transforme les variables catégorielles en variables binaires (encodage one-hot).\n",
+    "- `StandardScaler` : normalise les données numériques (centrage et réduction).\n",
+    "- `SimpleImputer` : gère les valeurs manquantes.\n",
+    "- `ColumnTransformer` : applique différents traitements à différentes colonnes.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "20c0d23f",
    "metadata": {},
    "outputs": [],
@@ -825,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ac0ab197",
    "metadata": {},
    "outputs": [
@@ -833,7 +923,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Déviance Poisson (fréquence) : 0.31420525477306444\n",
+      "Déviance Poisson (fréquence) : 0.321119794498376\n",
       "Déviance Gamma (sévérité) : 1.5392970094871283\n",
       "\n",
       "Modèles fréquence et sévérité entraînés.\n"
@@ -850,7 +940,7 @@
     "offset = np.log(data['Exposure'])\n",
     "\n",
     "X_train, X_test, y_train, y_test, offset_train, offset_test = train_test_split(\n",
-    "    X, y_freq, offset, test_size=0.1, random_state=42\n",
+    "    X, y_freq, offset, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
     "pipe_freq = Pipeline([\n",
@@ -887,8 +977,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b6325ce",
+   "metadata": {},
+   "source": [
+    "## Modélisation GLM Fréquence et Sévérité\n",
+    "\n",
+    "### Modèle de Fréquence (Poisson)\n",
+    "- Modélisation du nombre de sinistres avec un GLM Poisson, en intégrant un offset `log(Exposure)` pour tenir compte de l’exposition.\n",
+    "- Pipeline de prétraitement pour variables numériques et catégorielles.\n",
+    "- Données divisées en 80% entraînement / 20% test.\n",
+    "- Déviance Poisson sur test : **0.321**, indiquant un bon ajustement.\n",
+    "\n",
+    "### Modèle de Sévérité (Gamma)\n",
+    "- Modélisation des montants des sinistres positifs via un GLM Gamma, adapté aux variables strictement positives et asymétriques.\n",
+    "- Prétraitement similaire, sur sous-échantillon des sinistres > 0.\n",
+    "- Données divisées en 80% entraînement / 20% test.\n",
+    "- Déviance Gamma sur test : **1.54**, conforme à la difficulté à modéliser la sévérité.\n",
+    "\n",
+    "### Justifications\n",
+    "- GLM Poisson et Gamma sont des choix classiques pour modéliser fréquence et sévérité dans l’assurance.\n",
+    "- L’offset garantit la prise en compte de l’exposition pour la fréquence.\n",
+    "- Le pipeline assure un traitement cohérent des variables.\n",
+    "- La séparation entraînement/test permet d’évaluer la robustesse.\n",
+    "- Les résultats montrent une bonne modélisation de la fréquence, et une modélisation plus délicate de la sévérité, attendue dans ce contexte.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "01215923",
    "metadata": {},
    "outputs": [
@@ -938,12 +1055,67 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d833667b",
+   "cell_type": "markdown",
+   "id": "aba047c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Estimation et Visualisation des Prédictions\n",
+    "\n",
+    "### Calculs réalisés\n",
+    "- Prédictions de fréquence et sévérité faites sur l'ensemble de test.\n",
+    "- Calcul de la prime pure estimée :  \n",
+    "  \\[\\text{PrimePure_est} = \\text{Freq_est} \\times \\text{Sev_est}\\]\n",
+    "- Application de ces prédictions sur l'ensemble du portefeuille.\n",
+    "- Calcul des primes commerciales avec un coefficient de chargement de 1.2 :  \n",
+    "  \\[\\text{Prime_commerciale} = 1.2 \\times \\text{Prime_pure}\\]\n",
+    "- Calcul des primes totales en fonction de l’exposition.\n",
+    "- Somme des sinistres totaux réellement observés.\n",
+    "\n",
+    "### Résumé financier global\n",
+    "| Indicateur              | Valeur (€)       |\n",
+    "|------------------------|------------------|\n",
+    "| Prime totale perçue    | 61 684 000,54    |\n",
+    "| Sinistres totaux       | 59 909 216,50    |\n",
+    "| Profit                 | 1 774 784,04     |\n",
+    "| Taux de sinistralité   | 0,9712 (97,12%)  |\n",
+    "\n",
+    "### Interprétation\n",
+    "- Le modèle permet de générer des primes estimées cohérentes sur tout le portefeuille.\n",
+    "- Le profit est positif, mais faible, avec un taux de sinistralité proche de 1, ce qui signifie que les sinistres représentent presque la totalité des primes perçues.\n",
+    "- Le chargement commercial de 20% est intégré dans la prime commerciale.\n",
+    "- Ces résultats suggèrent un équilibre financier fragile, typique dans des contextes d’assurance compétitifs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10b03db3",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "Ce projet a permis de développer et entraîner deux modèles GLM distincts pour la modélisation de la fréquence et de la sévérité des sinistres : un modèle de Poisson pour la fréquence et un modèle Gamma pour la sévérité. Les modèles ont montré des performances correctes, avec une déviance Poisson de 0.32 pour la fréquence et une déviance Gamma de 1.54 pour la sévérité.\n",
+    "\n",
+    "L’application des modèles à l’ensemble du portefeuille a conduit à une estimation des primes pures, puis des primes commerciales avec un coefficient de chargement fixé arbitrairement à 1.2. Le résultat financier montre un taux de sinistralité proche de 97%, ce qui signifie que les primes couvrent presque totalement les sinistres. Le profit généré est positif mais faible, soulignant la nécessité d’une tarification prudente.\n",
+    "\n",
+    "## Recommandations\n",
+    "\n",
+    "- **Validation des modèles** : poursuivre l’évaluation avec des métriques supplémentaires (ex : RMSE, AIC, BIC, courbes ROC pour classification des sinistres éventuels) et éventuellement tester des modèles alternatifs (GBM, réseaux de neurones, etc.).\n",
+    "- **Segmentation plus fine** : envisager une segmentation plus détaillée des données (par exemple par type de véhicule, zone géographique, usage) pour capturer des effets spécifiques.\n",
+    "- **Gestion du déséquilibre** : analyser plus finement la distribution des sinistres rares et adapter les techniques d’échantillonnage ou pondération.\n",
+    "\n",
+    "## Méthode pour estimer les chargements commerciaux\n",
+    "\n",
+    "Plutôt que de fixer arbitrairement un coefficient (ici 1.2), une méthode pour estimer les chargements commerciaux pourrait inclure :\n",
+    "\n",
+    "1. **Analyse des coûts indirects** : recenser précisément les coûts administratifs, commerciaux, de gestion des sinistres et de réassurance liés au portefeuille.\n",
+    "2. **Simulation financière** : modéliser différents scénarios économiques et sinistralité pour quantifier la variabilité des résultats financiers.\n",
+    "3. **Benchmarking** : comparer les primes et chargements avec ceux du marché ou des concurrents pour calibrer la compétitivité.\n",
+    "4. **Optimisation de la prime** : utiliser des techniques d’optimisation (ex. minimisation de la variance du profit, maximisation de la rentabilité sous contrainte de solvabilité) pour ajuster le chargement.\n",
+    "5. **Approche basée sur la théorie du portefeuille** : inclure la diversification des risques, la volatilité des sinistres, et le coût du capital pour déterminer un chargement ajusté au risque réel.\n",
+    "6. **Tests de robustesse** : valider la prime commerciale avec des données historiques et ajuster en fonction des résultats observés.\n",
+    "\n",
+    "En appliquant cette méthode, la prime commerciale reflètera mieux la réalité économique, assurant à la fois compétitivité et rentabilité.\n"
+   ]
   }
  ],
  "metadata": {
