--- a/Notebook/Tarification non-vie.ipynb
+++ b/Notebook/Tarification non-vie.ipynb
@@ -335,45 +335,7 @@
       "1  Regular    D     1217  Rhone-Alpes          0.0         0.0  \n",
       "2   Diesel    B       54     Picardie          0.0         0.0  \n",
       "3   Diesel    B       76    Aquitaine          0.0         0.0  \n",
-      "4   Diesel    B       76    Aquitaine          0.0         0.0  \n",
-      "               IDpol        ClaimNb       Exposure       VehPower  \\\n",
-      "count   6.780130e+05  678013.000000  678013.000000  678013.000000   \n",
-      "unique           NaN            NaN            NaN            NaN   \n",
-      "top              NaN            NaN            NaN            NaN   \n",
-      "freq             NaN            NaN            NaN            NaN   \n",
-      "mean    2.621857e+06       0.053247       0.528750       6.454631   \n",
-      "std     1.641783e+06       0.240117       0.364442       2.050906   \n",
-      "min     1.000000e+00       0.000000       0.002732       4.000000   \n",
-      "25%     1.157951e+06       0.000000       0.180000       5.000000   \n",
-      "50%     2.272152e+06       0.000000       0.490000       6.000000   \n",
-      "75%     4.046274e+06       0.000000       0.990000       7.000000   \n",
-      "max     6.114330e+06      16.000000       2.010000      15.000000   \n",
-      "\n",
-      "               VehAge        DrivAge     BonusMalus VehBrand   VehGas    Area  \\\n",
-      "count   678013.000000  678013.000000  678013.000000   678013   678013  678013   \n",
-      "unique            NaN            NaN            NaN       11        2       6   \n",
-      "top               NaN            NaN            NaN      B12  Regular       C   \n",
-      "freq              NaN            NaN            NaN   166024   345877  191880   \n",
-      "mean         7.044265      45.499122      59.761502      NaN      NaN     NaN   \n",
-      "std          5.666232      14.137444      15.636658      NaN      NaN     NaN   \n",
-      "min          0.000000      18.000000      50.000000      NaN      NaN     NaN   \n",
-      "25%          2.000000      34.000000      50.000000      NaN      NaN     NaN   \n",
-      "50%          6.000000      44.000000      50.000000      NaN      NaN     NaN   \n",
-      "75%         11.000000      55.000000      64.000000      NaN      NaN     NaN   \n",
-      "max        100.000000     100.000000     230.000000      NaN      NaN     NaN   \n",
-      "\n",
-      "              Density  Region   ClaimAmount     Claimsevnb  \n",
-      "count   678013.000000  678013  6.780130e+05  678013.000000  \n",
-      "unique            NaN      21           NaN            NaN  \n",
-      "top               NaN  Centre           NaN            NaN  \n",
-      "freq              NaN  160601           NaN            NaN  \n",
-      "mean      1792.422405     NaN  8.835998e+01       0.039002  \n",
-      "std       3958.646564     NaN  5.822454e+03       0.207166  \n",
-      "min          1.000000     NaN  0.000000e+00       0.000000  \n",
-      "25%         92.000000     NaN  0.000000e+00       0.000000  \n",
-      "50%        393.000000     NaN  0.000000e+00       0.000000  \n",
-      "75%       1658.000000     NaN  0.000000e+00       0.000000  \n",
-      "max      27000.000000     NaN  4.075401e+06      16.000000  \n"
+      "4   Diesel    B       76    Aquitaine          0.0         0.0  \n"
      ]
     },
     {
@@ -404,7 +366,6 @@
     "# Aperçu du dataset\n",
     "print(\"\\nDimensions:\", data.shape)\n",
     "print(data.head())\n",
-    "print(data.describe(include='all'))\n",
     "\n",
     "# =====================================\n",
     "# ANALYSE DE LA DISTRIBUTION DES CIBLES\n",
@@ -898,7 +859,6 @@
     "\n",
     "## 📈 Matrice de V de Cramér (variables catégorielles)\n",
     "\n",
-    "- `VehPower` et `VehGas` : V ≈ 0.32 → dépendance modérée.\n",
     "- `Area` et `Region` : V ≈ 0.32 → attention à la redondance géographique.\n",
     "- Autres couples : V < 0.2 → peu de redondance.\n",
     "\n",
@@ -1072,13 +1032,13 @@
     "- Modélisation du nombre de sinistres avec un GLM Poisson, en intégrant un offset `log(Exposure)` pour tenir compte de l’exposition.\n",
     "- Pipeline de prétraitement pour variables numériques et catégorielles.\n",
     "- Données divisées en 80% entraînement / 20% test.\n",
-    "- Déviance Poisson sur test : **0.32**, indiquant un bon ajustement.\n",
+    "- Déviance Poisson sur test : **0,32**, indiquant un bon ajustement.\n",
     "\n",
     "### Modèle de Sévérité (Gamma)\n",
     "- Modélisation des montants des sinistres positifs via un GLM Gamma, adapté aux variables strictement positives et asymétriques.\n",
     "- Prétraitement similaire, sur sous-échantillon des sinistres > 0.\n",
     "- Données divisées en 80% entraînement / 20% test.\n",
-    "- Déviance Gamma sur test : **1.55**, conforme à la difficulté à modéliser la sévérité.\n",
+    "- Déviance Gamma sur test : **1,55**, conforme à la difficulté à modéliser la sévérité.\n",
     "\n",
     "### Justifications\n",
     "- GLM Poisson et Gamma sont des choix classiques pour modéliser fréquence et sévérité dans l’assurance.\n",
@@ -1153,7 +1113,7 @@
     "$$ \\text{PrimePure}_{\\text{est}} = \\text{Freq}_{\\text{est}} \\times \\text{Sev}_{\\text{est}}$$\n",
     "---\n",
     "- Application de ces prédictions sur l'ensemble du portefeuille.\n",
-    "- Calcul des primes commerciales avec un coefficient de chargement de 1.2 :\n",
+    "- Calcul des primes commerciales avec un coefficient de chargement de 1,2 :\n",
     "\n",
     "$$\\large \\text{PrimeCommerciale} = 1{,}2 \\times \\text{PrimePure}_{\\text{est}}$$\n",
     "  \n",
@@ -1164,9 +1124,9 @@
     "### Résumé financier global\n",
     "| Indicateur              | Valeur (€)      |\n",
     "|------------------------|------------------|\n",
-    "| Prime totale perçue    | 61 304 178.22    |\n",
+    "| Prime totale perçue    | 61 304 178,22    |\n",
     "| Sinistres totaux       | 59 909 216,50    |\n",
-    "| Profit                 |  1 394 961.72    |\n",
+    "| Profit                 |  1 394 961,72    |\n",
     "| Taux de sinistralité   |        97,72%    |\n",
     "\n",
     "### Interprétation\n",
@@ -1183,9 +1143,9 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "Ce projet a permis de développer et entraîner deux modèles GLM distincts pour la modélisation de la fréquence et de la sévérité des sinistres : un modèle de Poisson pour la fréquence et un modèle Gamma pour la sévérité. Les modèles ont montré des performances correctes, avec une déviance Poisson de 0.32 pour la fréquence et une déviance Gamma de 1.55 pour la sévérité.\n",
+    "Ce projet a permis de développer et entraîner deux modèles GLM distincts pour la modélisation de la fréquence et de la sévérité des sinistres : un modèle de Poisson pour la fréquence et un modèle Gamma pour la sévérité. Les modèles ont montré des performances correctes, avec une déviance Poisson de 0,32 pour la fréquence et une déviance Gamma de 1,55 pour la sévérité.\n",
     "\n",
-    "L’application des modèles à l’ensemble du portefeuille a conduit à une estimation des primes pures, puis des primes commerciales avec un coefficient de chargement fixé arbitrairement à 1.2. Le résultat financier montre un taux de sinistralité proche de 97%, ce qui signifie que les primes couvrent presque totalement les sinistres. Le profit généré est positif mais faible, soulignant la nécessité d’une tarification prudente.\n",
+    "L’application des modèles à l’ensemble du portefeuille a conduit à une estimation des primes pures, puis des primes commerciales avec un coefficient de chargement fixé arbitrairement à 1,2. Le résultat financier montre un taux de sinistralité proche de 98%, ce qui signifie que les primes couvrent presque totalement les sinistres. Le profit généré est positif mais faible, soulignant la nécessité d’une tarification prudente.\n",
     "\n",
     "## Recommandations\n",
     "\n",
@@ -1195,7 +1155,7 @@
     "\n",
     "## Méthode pour estimer les chargements commerciaux\n",
     "\n",
-    "Plutôt que de fixer arbitrairement un coefficient (ici 1.2), une méthode pour estimer les chargements commerciaux pourrait inclure :\n",
+    "Plutôt que de fixer arbitrairement un coefficient (ici 1,2), une méthode pour estimer les chargements commerciaux pourrait inclure :\n",
     "\n",
     "1. **Analyse des coûts indirects** : recenser précisément les coûts administratifs, commerciaux, de gestion des sinistres et de réassurance liés au portefeuille.\n",
     "2. **Simulation financière** : modéliser différents scénarios économiques et sinistralité pour quantifier la variabilité des résultats financiers.\n",
@@ -1206,6 +1166,14 @@
     "\n",
     "En appliquant cette méthode, la prime commerciale reflètera mieux la réalité économique, assurant à la fois compétitivité et rentabilité.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c4545ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
